# quills

./: .gitignore  README.md  experiments  expriments  pyproject.toml  qt  quills  simulate  test  test.py  transpile
.devcontainer/: Dockerfile  devcontainer.json
benchmarks/: barenco_tof_4.qasm  benchmarks.txt  mod5mils_65.qasm  no_swap.qasm  nonopt_depth.qasm  opt_depth.qasm
benchmarks/test/: parallel.qasm  pareto.qasm
benchmarks/vqe/: vqe_8_0_10_100.qasm  vqe_8_0_15_100.qasm  vqe_8_0_5_100.qasm  vqe_8_1_10_100.qasm  vqe_8_1_15_100.qasm  vqe_8_1_5_100.qasm  vqe_8_2_10_100.qasm  vqe_8_2_15_100.qasm  vqe_8_2_5_100.qasm  vqe_8_3_10_100.qasm  vqe_8_3_15_100.qasm  vqe_8_3_5_100.qasm  vqe_8_4_10_100.qasm  vqe_8_4_15_100.qasm  vqe_8_4_5_100.qasm
gc_incr_irfansha/: out  problem.pddl
gc_incr_irfansha/v1/: domain.pddl  out
gc_incr_irfansha/v2/: domain.pddl  out  problem.pddl
gc_opt_cost/: domain.pddl  out  problem.pddl
manual/: domain.pddl  problem.pddl
qt/: main.py
src/: configs.py  experiments.py  main.py  output_checker.py  pddl.py  platforms.json  platforms.py  qt.py  quantum_platform.py  quills.py  sat.py  sat_extension.py  simulator.py  solvers.py  test.py  test_sat.py  test_sat_new.py  transpiler.py
src/benchmarks/: toy_example.qasm
src/synthesizers/: cond_cost_based_optimal_lifted_planning.py  cond_cost_based_optimal_planning.py  cond_iterative_incr_lifted_planning.py  cond_iterative_incr_planning.py  cost_based_optimal_lifted_planning.py  cost_based_optimal_planning.py  gl_incr_irv1_planning.py  gl_incr_irv2_planning.py  planning.py  (+15 more)
temporal_test/: domain.pddl  problem.pddl  test_domain.pddl
(+87 files in other folders)
