[tool.poetry]
name = "qt"
version = "0.1.0"
description = "An algorithm for depth-optimal layout synthesis of quantum circuits."
authors = ["Anders B. Clausen <anbclausen@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
qiskit = "^0.46.0"
qiskit-aer = "^0.13.3"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
