[tool.poetry]
name = "qt"
version = "0.1.0"
description = "An algorithm for depth-optimal layout synthesis of quantum circuits."
authors = ["Anders B. Clausen <anbclausen@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mqt-qcec = "^2.5.0"
ruamel-yaml = "^0.18.6"
tarski-lapkt = {extras = ["arithmetic", "gringo"], version = "^0.1.3"}
python-sat = {extras = ["aiger", "approxmc", "cryptosat", "pblib"], version = "^1.8.dev1"}
setuptools = "^69.1.1"
sympy = "^1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
