[tool.poetry]
name = "quills"
version = "0.1.0"
description = "An algorithm for depth-optimal layout synthesis of quantum circuits."
authors = ["Anders B. Clausen <anbclausen@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mqt-qcec = "^2.5.0"
python-sat = {extras = ["aiger", "approxmc", "cryptosat", "pblib"], version = "^1.8.dev1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
